@@ -26,6 +26,7 @@
 *** Changed
 - Split temp function into establish_connection & debug functions
 - Fixed output in pop3client_utils::print_messages
+- Cleaned up save_mail funtion (now saves complete emails as .eml files with the emails subject as file name)
 *** Removed
 - Removed subprocess attempt
 ** [0.0.3] - 2020-03-01
